--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1>Curso de Programación con JavaScript</h1>
 <!-- Emojipedia.org -->
 
-<script src="js/main.js" type="text/JavaScript"></script>
+<script src="main.js" type="text/JavaScript"></script>
 </body>
 </html>
